# sorts_tui

./: Cargo.toml  README.md
src/: analytics.rs  count.rs  main.rs  sort.rs  sort_instance.rs  sort_type.rs  terminal.rs
