[package]
name = "sorts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
ratatui = "0.28.1"
clap = { version = "4.5.17", features = ["derive"] }

strum = "0.26.3"
strum_macros = "0.26.4"

rand = "0.8.5"
